Update links and text in index.html

--- a/index.html
+++ b/index.html
@@ -380,13 +380,13 @@
                 Acesse a lista de classificados, a prova oficial e o gabarito comentado da primeira fase.
             </p>
             <div class="flex flex-wrap justify-center items-center gap-4">
-                <a href="https://drive.google.com/file/d/1TxV2wlZR3u3J8zBA_Br-YxUS0tB064ug/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-amber-500 to-yellow-500 text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
+                <a href="https://drive.google.com/file/d/1tDA2G0A9N3NZUhpe-0ZhSVXSJVFSAPve/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-amber-500 to-yellow-500 text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
                     <i class="fas fa-trophy mr-2"></i> Ver Classificados
                 </a>
                 <a href="https://drive.google.com/file/d/1ercVldBjDDu41UpygEI9cwukDtWOr7pm/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#0072CE] to-[#002855] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
                     <i class="fas fa-file-pdf mr-2"></i> Baixar Prova Oficial
                 </a>
-                <a href="https://drive.google.com/file/d/1thY6DW7A3Gva_f6EngrUqCkmkn2RYLpL/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#16a34a] to-[#15803d] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
+                <a href="https://drive.google.com/file/d/163aPQmnl3BMxUTW3m-4TshICtSiP7HWf/view?usp=sharing" target="_blank" class="bg-gradient-to-r from-[#16a34a] to-[#15803d] text-white px-8 py-4 rounded-full font-bold inline-block btn-hover glow-effect text-lg">
                     <i class="fas fa-file-alt mr-2"></i> Baixar Gabarito Comentado
                 </a>
             </div>
@@ -568,7 +568,7 @@
                 </div>
 
                 <div class="flex flex-col items-center md:items-end">
-                    <p class="text-sm mb-4 opacity-80">Apoio:</p>
+                    <p class="text-sm mb-4 opacity-80">Realização:</p>
                     <div class="flex items-center">
                         <img src="https://web.icmc.usp.br/SCAPINST/identidade_visual/logomarca/NO%20ICMC%20PRETO%20fundo%20transparente.png?Mobile=1&Source=%2F%5Flayouts%2Fmobile%2Fview%2Easpx%3FList%3Dbde3e70c%2Da897%2D4e2a%2Dbf3e%2D7f5e9594bebd%26View%3Da7be44e2%2D1aa1%2D40e1%2Daa92%2Db8545c1c68b9%26RootFolder%3D%2FSCAPINST%2Fidentidade%5Fvisual%2Flogomarca%26FolderCTID%3D0x0120005CF1188E1C67B544B10D453367C2C98B%26CurrentPage%3D1"
                                 alt="ICMC-USP"
